--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - rpm --import https://repo.mysql.com/RPM-GPG-KEY-mysql-2022
       - rpm -Uvh https://dev.mysql.com/get/mysql80-community-release-el7-11.noarch.rpm
+      - yum update -y
       - yum install -y mysql-community-client
   pre_build:
     commands:
