--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,8 @@ version: 0.2
 phases:
   install:
     commands:
-      - rpm --import https://repo.mysql.com/RPM-GPG-KEY-mysql-2022
-      - rpm -Uvh https://dev.mysql.com/get/mysql80-community-release-el7-11.noarch.rpm
-      - yum update -y
+      - wget https://dev.mysql.com/get/mysql80-community-release-el7-11.noarch.rpm
+      - yum localinstall -y mysql80-community-release-el7-11.noarch.rpm
       - yum install -y mysql-community-client
   pre_build:
     commands:
